--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "MongoDatabase": {
+    "ConnectionString": "mongodb+srv://sharo:Sharo2025@cluster0.eoyrigt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+    "DatabaseName": "ActivitiesDB",
+    "BooksCollectionName": "Books"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
